--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "system_error": "cpp",
         "iostream": "cpp",
         "array": "cpp",
-        "__tuple": "cpp"
+        "__tuple": "cpp",
+        "deque": "cpp"
     }
 }
