Add solution: Lesson 7 - Fish. Update format of previous document.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "iostream": "cpp",
         "array": "cpp",
         "__tuple": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "stack": "cpp"
     }
 }
